--- a/biblio.bib
+++ b/biblio.bib
@@ -1,52 +1,37 @@
-@misc{ScalaNat38:online,
-author = {},
-title = {Scala Native — Scala Native 0.4.5-SNAPSHOT documentation},
-howpublished = {\url{https://scala-native.readthedocs.io/en/latest/}},
-month = {},
-year = {},
-note = {(Accessed on 05/22/2022)}
-}
-@misc{KotlinMu12:online,
-author = {},
-title = {Kotlin Multiplatform | Kotlin},
-howpublished = {\url{https://kotlinlang.org/docs/multiplatform.html}},
-month = {},
-year = {},
-note = {(Accessed on 05/22/2022)}
-}
-@misc{Showcase57:online,
-author = {},
-title = {Showcase - Flutter apps in production},
-howpublished = {\url{https://flutter.dev/showcase}},
-month = {},
-year = {},
-note = {(Accessed on 05/22/2022)}
+@book{10.5555/3312046,
+  author = {Sutton, Richard S. and Barto, Andrew G.},
+  title = {Reinforcement Learning: An Introduction},
+  year = {2018},
+  isbn = {0262039249},
+  publisher = {A Bradford Book},
+  address = {Cambridge, MA, USA},
+  %abstract = {The significantly expanded and updated new edition of a widely used text on reinforcement learning, one of the most active research areas in artificial intelligence. Reinforcement learning, one of the most active research areas in artificial intelligence, is a computational approach to learning whereby an agent tries to maximize the total amount of reward it receives while interacting with a complex, uncertain environment. In Reinforcement Learning, Richard Sutton and Andrew Barto provide a clear and simple account of the field's key ideas and algorithms. This second edition has been significantly expanded and updated, presenting new topics and updating coverage of other topics. Like the first edition, this second edition focuses on core online learning algorithms, with the more mathematical material set off in shaded boxes. Part I covers as much of reinforcement learning as possible without going beyond the tabular case for which exact solutions can be found. Many algorithms presented in this part are new to the second edition, including UCB, Expected Sarsa, and Double Learning. Part II extends these ideas to function approximation, with new sections on such topics as artificial neural networks and the Fourier basis, and offers expanded treatment of off-policy learning and policy-gradient methods. Part III has new chapters on reinforcement learning's relationships to psychology and neuroscience, as well as an updated case-studies chapter including AlphaGo and AlphaGo Zero, Atari game playing, and IBM Watson's wagering strategy. The final chapter discusses the future societal impacts of reinforcement learning.}
 }
 
-@misc{ReactNat54:online,
-author = {},
-title = {React Native · Learn once, write anywhere},
-howpublished = {\url{https://reactnative.dev/}},
-month = {},
-year = {},
-note = {(Accessed on 05/22/2022)}
+@book{zai2020deep,
+  title={Deep reinforcement learning in action},
+  author={Zai, Alexander and Brown, Brandon},
+  year={2020},
+  publisher={Manning Publications}
 }
 
-@misc{Scalajs34:online,
-author = {},
-title = {Scala.js},
-howpublished = {\url{https://www.scala-js.org/}},
-month = {},
-year = {},
-note = {(Accessed on 05/22/2022)}
+@book{graesser2019foundations,
+  title={Foundations of deep reinforcement learning},
+  author={Graesser, Laura and Keng, Wah Loon},
+  year={2019},
+  publisher={Addison-Wesley Professional}
 }
 
-@article{https://doi.org/10.5075/epfl-thesis-8733,
-  doi = {10.5075/EPFL-THESIS-8733},
-  url = {http://infoscience.epfl.ch/record/256862},
-  author = {Doeraene,  Sébastien Jean R},
-  language = {en},
-  title = {Cross-Platform Language Design},
-  publisher = {Lausanne,  EPFL},
-  year = {2018}
+@article{schulman2017proximal,
+  title={Proximal policy optimization algorithms},
+  author={Schulman, John and Wolski, Filip and Dhariwal, Prafulla and Radford, Alec and Klimov, Oleg},
+  journal={arXiv preprint arXiv:1707.06347},
+  year={2017}
+}
+
+@article{mnih2013playing,
+  title={Playing atari with deep reinforcement learning},
+  author={Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Graves, Alex and Antonoglou, Ioannis and Wierstra, Daan and Riedmiller, Martin},
+  journal={arXiv preprint arXiv:1312.5602},
+  year={2013}
 }
