--- a/intro-deep-reinforcement-learning.tex
+++ b/intro-deep-reinforcement-learning.tex
@@ -636,7 +636,26 @@ for _ in range(epochs):
 \end{frame}
 \section{Conclusion}
 \begin{frame}{Conclusion}
-
+	\begin{block}{What we have learned}
+		\begin{itemize}
+			\item Deep Reinforcement Learning is a powerful tool for solving complex tasks
+			\item Deep Q Learning is a simple yet effective algorithm for solving reinforcement learning tasks
+		\end{itemize}
+	\end{block}
+	\begin{exampleblock}{Just a scratch on the surface}
+		\begin{itemize}
+			\item Deep Reinforcement Learning is a very active research field
+			\item There are a lot of algorithms and techniques to learn
+			\item There are a lot of interesting applications to explore
+		\end{itemize}
+	\end{exampleblock}
+	\begin{block}{Resources}
+		\begin{itemize}
+			\item \citetitle*{10.5555/3312046}: intro to Reinforcement Learning (reference book)
+			\item \citetitle*{zai2020deep}: pratice-oriented book on Deep Reinforcement Learning
+			\item \citetitle*{graesser2019foundations}: intro to Deep Reinforcement Learning
+		\end{itemize}
+	\end{block}
 \end{frame}
 %===============================================================================
 \section*{}
