chore: fix typos

--- a/intro-deep-reinforcement-learning.tex
+++ b/intro-deep-reinforcement-learning.tex
@@ -95,9 +95,9 @@
 				\begin{itemize}
 					\item Multi-agent systems
 					\item Distributed Collective Intellingence
-					\item Deep Learning Learning
+					\item Deep Reinforcement Learning
 					\item Multi-agent Reinforcement Learning
-					\item Macro-programming
+					\item Distributed Macro-programming
 				\end{itemize}
 				\item Lead developer of \href{https://scafi.github.io/}{ScaFi}
 				\item Scala Lover \& Functional Programming enthusiast
