--- a/intro-deep-reinforcement-learning.tex
+++ b/intro-deep-reinforcement-learning.tex
@@ -416,7 +416,7 @@
 	\begin{itemize}
 		\item \textbf{OpenAI Gym} \url{https://gymnasium.farama.org/content/basic_usage/} \faArrowRight for the environment definition
 		\item \textbf{PyTorch} \url{https://pytorch.org/} \faArrowRight for the neural network definition
-		\item \textbf{Stable Baselines}  \url{https://stable-baselines.readthedocs.io/en/master/} \,faArrowRight for the DRL algorithms
+		\item \textbf{Stable Baselines}  \url{https://stable-baselines.readthedocs.io/en/master/} \faArrowRight for the DRL algorithms
 	\end{itemize}
 \end{block}
 \end{frame}
