chore: add url to notebook

--- a/intro-deep-reinforcement-learning.tex
+++ b/intro-deep-reinforcement-learning.tex
@@ -420,6 +420,9 @@
 		\item \textbf{Stable Baselines}  \url{https://stable-baselines.readthedocs.io/en/master/} \faArrowRight for the DRL algorithms
 	\end{itemize}
 \end{block}
+\begin{exampleblock}{Code repository}
+\url{https://github.com/cric96/intro-deep-reinforcement-learning-python}
+\end{exampleblock}
 \end{frame}
 \begin{frame}{OpenAI Gym}
 	\centering
